--- a/main.css
+++ b/main.css
@@ -9,6 +9,11 @@ body
 	margin: 0;
 	padding: 0;
 	z-index: -1;
+	
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%)
 }
 
 #selfie
